log
Fri 21 Apr 2023 04:15:23 AM UTC: 
 tests:  1|8
total_score: 0/70
005b3fe
Fri 21 Apr 2023 04:32:24 AM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
9e19944
Fri 21 Apr 2023 04:32:52 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
cac5ae2
Fri 21 Apr 2023 04:42:18 AM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  4|7
total_score: 5/70
5a93e65
Fri 21 Apr 2023 04:47:03 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:16: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘void *’ [-Werror=format=]
   82 |       printf("%d",tree->current->pair->key);
      |               ~^  ~~~~~~~~~~~~~~~~~~~~~~~~
      |                |                     |
      |                int                   void *
      |               %p
cc1: all warnings being treated as errors
Compilation failed
b48fd9d
Fri 21 Apr 2023 04:48:41 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:5: error: expected ‘,’ or ‘;’ before ‘if’
   81 |     if(resultado==1)
      |     ^~
treemap.c:85:5: error: ‘else’ without a previous ‘if’
   85 |     else if(resultado==0){
      |     ^~~~
Compilation failed
101b065
Fri 21 Apr 2023 04:48:52 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ba5a55a
Fri 21 Apr 2023 04:50:33 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
1eb7908
Fri 21 Apr 2023 05:04:18 AM UTC: 
 treemap.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
 tests:  13|5
total_score: 25/70
d5b7436
Fri 21 Apr 2023 05:10:07 AM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  15|4
total_score: 25/70
d8de1ac
